Fix scrollbars

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
     background-color: #ffebee;
     margin: 0;
     padding-top: 10px;
+    overflow-x: hidden;
 }
 
 nav, main, h1 {
